<resources>
    <string name="app_name">TNT</string>

    <!--entrance fragment-->
    <string name="entrance">Entrance</string>

    <!--signin fragment-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="stay_singed_in">stay singed in</string>

    <!--sign up fragment-->
    <string name="sign_up">Sign up</string>
    <string name="gender">Gender</string>
    <string name="im_a">I\'m a</string>
    <string name="first_Name">First name</string>
    <string name="last_Name">Last name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="city">City</string>
    <string name="id">ID</string>
    <string name="trainer_trainee">Trainer/Trainee</string>
    <string name="trainer">Trainer</string>
    <string name="trainee">Trainee</string>
    <string name="phone_Number">Phone number</string>
    <string name="add_photo">Add photo</string>
    <string name="add_profile_pic">Add profile photo</string>
    <string name="change_photo">Change photo</string>
    <string name="permission_necessary">Permission necessary</string>
    <string name="camera_permission_necessary">Camera permission necessary</string>
    <string name="external_storage_permission_necessary">External storage permission is necessary</string>
    <string name="a_permission_necessary">A permission necessary</string>

    <string name="done">Done</string>
    <string-array name="add_camera_arr">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>
    <string name="select_photo">Select photo</string>
    <string name="continuee">Continue</string>

    <string name="fill_email">Fill Email address</string>
    <string name="fill_email_again">Please ReEnter Your Email</string>
    <string name="choose_password">Choose password</string>
    <string name="reenter_password">Reenter password</string>
    <string name="im_a_trainee">I\'m a trainee</string>
    <string name="im_a_coach">I\'m a coach</string>


    <string name="training_program_current">Current Program</string>


    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="bank">Programs bank</string>


    <string-array name="choose_trainer_trainee">
        <item>Trainer/Trainee</item>
        <item>Trainer</item>
        <item>Trainee</item>
    </string-array>

    <string name="select_gender">Select gender</string>
    <string name="cancel">Cancel</string>
    <string-array name="genders">
        <item>Man</item>
        <item>Woman</item>
    </string-array>
    <string name="nothing_to_show">Nothing To Show</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- trainee section -->
    <string name="number_of_sets">Sets:</string>
    <string name="repeats">Repeats:</string>
    <string name="weight">Weight:</string>
    <string name="rest">Rest:</string>
    <string name="Link_to_drill">Link To Movie</string>

    <string name="add_trainee">Add trainee</string>
    <string name="use_emaii">Use email address</string>
    <string name="use_phone_number">Use phone number</string>
    <string name="input_email">Input Email</string>
    <string name="input_phone">Input phone number</string>
    <string name="add_email_of_new_trainee">Email of the new trainee</string>
    <string name="add_phone_of_new_trainee">Phone num. of the new trainee</string>
    <string name="add">Add</string>


    <!--edit program fragment-->
    <string name="addNewProgram">Add new program</string>
    <string name="addFromBank">Add program from bank</string>
    <string name="createNewProgram">Create new program</string>


    <!--new drill dialog -->
    <string name="chooseMuscleGroup">Choose muscle group</string>

    <string-array name="muscle_groups">
        <item>Choose muscle group</item>
        <item>Chest</item>
        <item>Back</item>
        <item>Biceps</item>
        <item>Triceps</item>
        <item>Legs</item>
        <item>Shoulders</item>
        <item>ABs</item>
        <!-- <item>Aerobic</item>  -->
    </string-array>

    <!--create program fragment-->
    <string name="noMuscleGroup">No Muscle Group was selected</string>

    <string-array name="daysOfWeek">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>


    <!--add from bank fragment-->
    <string name="areYouSureYouWantToAddThisProgram">Are you sure you want to add this program to your trainee?</string>

    //facebook login
    <string name="facebook_app_id">655993528067305</string>
    <string name="fb_login_protocol_scheme">fb655993528067305</string>

    <string name="NameOfProgram">Name of program:</string>
    <string name="daysOfWorkout">Days of workout:</string>
    <string name="ChooseDaysOfWorkout">Choose days of workout:</string>
    <string name="remove_trainee_by_email">Remove trainee by email</string>
</resources>
