<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android.support.design="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@drawable/button_background_light">

            <android.support.design.widget.TextInputEditText
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background_light"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputEditText
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:hint="@string/password"
                android:inputType="textEmailAddress"

                android:textColorHint="@color/colorPrimary" />
        </android.support.design.widget.TextInputLayout>

        <!--<CheckBox
           android:id="@+id/checkbox_meat"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_marginTop="10dp"
          android:onClick="onCheckboxClicked"
            android:text="@string/stay_singed_in" />-->

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_marginTop="10dp"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:text="@string/sign_in"
            android:layout_gravity="center"
            android:background="@drawable/button_background_dark" />

        <Button
            android:id="@+id/btn_forgot_password"
            android:layout_marginTop="20dp"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:background="@android:color/transparent"  />
    </LinearLayout>


</FrameLayout>