<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10sp"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    app:contentPadding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:entries="@array/muscle_groups"
                android:prompt="@string/chooseMuscleGroup" />
        </LinearLayout>


        <TextView
            android:id="@+id/drill_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Drill Name"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/number_of_sets"
                android:textColor="@color/colorAccent"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/Number_of_sets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="15"
                android:textSize="21sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/weight"
                android:textColor="@color/colorAccent"
                android:textSize="21sp" />


            <TextView
                android:id="@+id/weight_in_kg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="15"
                android:textSize="21sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/rest"
                android:textColor="@color/colorAccent"
                android:textSize="21sp" />


            <TextView
                android:id="@+id/Rest_In_seconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="15"
                android:textSize="21sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/drill_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="10sp"
            android:hint="Description"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/Link_To_Drill_Movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:autoLink="web"
            android:clickable="true"
            android:text="@string/Link_to_drill"
            android:textAlignment="center"
            android:textSize="21sp" />


    </LinearLayout>

</android.support.v7.widget.CardView>