<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/background_drill"
    android:orientation="vertical">

    <TextView
        android:id="@+id/drillHolder_drillName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:hint="Drill Name"
        android:textAlignment="center"
        android:textColor="@color/primary_text"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_sets"
            android:textColor="@color/colorAccent"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/drillHolder_NumberOfSets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:hint="15"
            android:textColor="@color/primary_text"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/weight"
            android:textColor="@color/colorAccent"
            android:textSize="21sp" />


        <TextView
            android:id="@+id/drillHolder_weightInKg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:hint="15"
            android:textColor="@color/primary_text"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeats"
            android:textColor="@color/colorAccent"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/drillHolder_NumberOfRepeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:hint="15"
            android:textColor="@color/primary_text"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/rest"
            android:textColor="@color/colorAccent"
            android:textSize="21sp" />


        <TextView
            android:id="@+id/drillHolder_RestInSeconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/primary_text"
            android:gravity="center"
            android:hint="15"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/drillHolder_drillDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="10sp"
        android:hint="Description"
        android:textAlignment="center"
        android:textColor="@color/primary_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/drillHolder_LinkToDrillMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:autoLink="web"
        android:clickable="true"
        android:paddingBottom="5dp"
        android:text="@string/Link_to_drill"
        android:textAlignment="center"
        android:textColor="@color/primary_text"
        android:textSize="21sp" />

</LinearLayout>