<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10sp"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    app:contentPadding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/drillHolder_drillName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Drill Name"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/number_of_sets"
                android:textColor="@color/colorAccent"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/drillHolder_NumberOfSets"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:gravity="center"
                android:hint="15"
                android:textSize="21sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/weight"
                android:textColor="@color/colorAccent"
                android:textSize="21sp" />


            <TextView
                android:id="@+id/drillHolder_weightInKg"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="15"
                android:textSize="21sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeats"
                android:textColor="@color/colorAccent"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/drillHolder_NumberOfRepeats"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:gravity="center"
                android:hint="15"
                android:textSize="21sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/rest"
                android:textColor="@color/colorAccent"
                android:textSize="21sp" />


            <TextView
                android:id="@+id/drillHolder_RestInSeconds"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="15"
                android:textSize="21sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/drillHolder_drillDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="10sp"
            android:hint="Description"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/drillHolder_LinkToDrillMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:autoLink="web"
            android:clickable="true"
            android:text="@string/Link_to_drill"
            android:textAlignment="center"
            android:textSize="21sp" />


    </LinearLayout>

</android.support.v7.widget.CardView>